update images home, products pages

--- a/site/layouts/partials/api-monitoring-section.html
+++ b/site/layouts/partials/api-monitoring-section.html
@@ -1,4 +1,4 @@
-<section class="api-monitoring-section">
+<section class="site-monitoring-section gray-section">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-10 col-lg-5">
@@ -14,14 +14,14 @@
       <div class="col-sm-12 col-lg-7">
         <div class="image-side right">
           <picture>
-            <source type="image/webp" srcset="/landing/assertions-edit@2x.webp">
-            <source type="image/png" srcset="/landing/assertions-edit@2x.png">
-            <img  class="big-landing-image big-drop-shadow assertions fade-in lazy" src="/landing/assertions-edit@2x.png" alt="checkly assertions edit" width="810" height="560" />
+            <source type="image/webp" srcset="/landing/api-check-1-section-screenshot@2x.webp">
+            <source type="image/png" srcset="/landing/api-check-1-section-screenshot@2x.png">
+            <img  class="big-landing-image big-drop-shadow code fade-in lazy" src="/landing/api-check-1-section-screenshot@2x.png" alt="checkly assertions edit" width="810" height="560" />
           </picture>
           <picture>
-            <source type="image/webp" srcset="/landing/assertions@2x.webp">
-            <source type="image/png" srcset="/landing/assertions@2x.png">
-            <img  class="big-landing-image big-drop-shadow results fade-in lazy" src="/landing/assertions@2x.png" alt="checkly assertions" width="810" height="595"  />
+            <source type="image/webp" srcset="/landing/api-check-2-section-screenshot@2x.webp">
+            <source type="image/png" srcset="/landing/api-check-2-section-screenshot@2x.png">
+            <img  class="big-landing-image big-drop-shadow screenshots fade-in lazy" src="/landing/api-check-2-section-screenshot@2x.png" alt="checkly assertions" width="810" height="595"  />
           </picture>
         </div>
       </div>
