--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-10 col-lg-8">
-        <h1 class="display-3">Delightful Active Monitoring for Developers</h1>
+        <h1 class="display-3">Delightful Active Monitoring<br/>for Developers</h1>
         <p class="lead">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
           and loving JavaScript.</p>
         <div>
@@ -15,9 +15,9 @@
     <div class="row">
       <div class="col-sm-12 text-center">
         <picture>
-          <source type="image/webp" srcset="/landing/home-dashboard@2x.webp">
-          <source type="image/png" srcset="/landing/home-dashboard@2x.png">
-          <img  class="hero-image big-drop-shadow img-fluid" src="/landing/home-dashboard@2x.png" alt="checkly monitoring dashboard" width="1100" height="580" />
+          <source type="image/webp" srcset="/landing/home-hero-screenshot@2x.webp">
+          <source type="image/png" srcset="/landing/home-hero-screenshot@2x.png">
+          <img  class="hero-image big-drop-shadow img-fluid" src="/landing/home-hero-screenshot@2x.png" alt="checkly monitoring dashboard" width="1100" height="580" />
         </picture>
       </div>
     </div>
