--- a/src/scss/sections/_alerting.scss
+++ b/src/scss/sections/_alerting.scss
@@ -41,6 +41,7 @@
   .alerting-section {
     .alerting-top-image {
       width: 100%;
+      height: auto;
     }
     .alerting-image {
       margin-top: 50px;
