--- a/src/scss/sections/_testimonials.scss
+++ b/src/scss/sections/_testimonials.scss
@@ -22,7 +22,8 @@
     flex-direction: column;
     float: left;
     img {
-      width: 50px;
+      width: 55px;
+      height: 55px;
       margin-right: 1rem;
     }
   }
@@ -60,7 +61,8 @@
     }
     .testimonial-portrait {
       img {
-        width: 50px;
+        width: 55px;
+        height: 55px;
         margin-right: 1rem;
       }
     }
@@ -96,7 +98,8 @@
     }
     .testimonial-portrait {
       img {
-        width: 65px;
+        width: 55px;
+        height: 55px;
         margin-right: 1rem;
       }
     }
