--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -15,11 +15,17 @@
   }
 
   .display-3 {
-    letter-spacing: $headings-letter-spacing;
+    letter-spacing: -0.05em;
     line-height: 72px;
     color: $black;
     font-weight: 700;
     margin-bottom: 30px;
+
+    br {
+      margin: 0;
+      height: 0;
+      padding: 0;
+    }
   }
 
   .lead {
@@ -49,17 +55,21 @@
     margin: auto;
     margin-top: 50px;
     max-width: 1100px;
+    border-radius: 10px;
 
     @include media-breakpoint-up(xs) {
       width: 360px;
+      height: auto;
     }
 
     @include media-breakpoint-up(sm) {
       width: 480px;
+      height: auto;
     }
 
     @include media-breakpoint-up(md) {
       width: 100%;
+      height: auto;
     }
   }
 }
