--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -58,6 +58,11 @@ body {
 	padding-right: 24px;
 	padding-left: 24px;
 }
+
+.gray-section {
+	background: $ash;
+}
+
 @include media-breakpoint-down(md) {
 	.container {
 		width: 100%;
