--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -1,14 +1,13 @@
 <section class="promo-banner headless">
   <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank" rel="noopener">
-    <span class="text-gray-dark">🖖 Wanna learn about <strong>Puppeteer</strong> and <strong>Playwright?</strong></span>
+    <span class="text-gray-dark">🖖 Want to <strong>support us</strong>? Vote for us!</span>
   </a>
   <a class="promo-banner-link" href="https://www.producthunt.com/posts/theheadless-dev-2" target="_blank" rel="noopener">
     <span class="ml-1 mr-1">We just launched
-      <strong>theheadless.dev</strong> on
+      <strong>Checkly V2.0</strong> on
       <img class="mr-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt logo">Product Hunt
       <span class="ion-arrow-right-c"></span>
     </span>
 
   </a>
 </section>
-
