--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -1,12 +1,12 @@
 <section class="promo-banner headless">
   <a class="promo-banner-link" href="https://www.producthunt.com/posts/checkly-2-0" target="_blank" rel="noopener">
-    <span class="text-gray-dark">🖖 Want to <strong>support us</strong>? Please vote for us!</span>
+    <span class="text-gray-dark">🖖 Like Checkly?</span>
   </a>
   <a class="promo-banner-link" href="https://www.producthunt.com/posts/checkly-2-0" target="_blank" rel="noopener">
     <span class="ml-1 mr-1">
-      <strong>Checkly</strong> is on
+      <strong>Support</strong> is on
       <img class="mr-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt logo">Product Hunt
-      <span class="ion-arrow-right-c">today.</span>
+      <span class="ion-arrow-right-c"> today.</span>
     </span>
 
   </a>
