--- a/site/layouts/partials/promo-banner.html
+++ b/site/layouts/partials/promo-banner.html
@@ -4,7 +4,7 @@
   </a>
   <a class="promo-banner-link" href="https://www.producthunt.com/posts/checkly-2-0" target="_blank" rel="noopener">
     <span class="ml-1 mr-1">
-      <strong>Support</strong> is on
+      <strong>Support</strong> us on
       <img class="mr-1" src="/landing/product-hunt-logo.png" height="16px" alt="product hunt logo">Product Hunt
       <span class="ion-arrow-right-c"> today.</span>
     </span>
