integration page desktop design

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import 'syntax';
 @import 'blog';
 @import 'product';
+@import 'integrations';
 @import 'promo-banner';
 @import 'share-list';
 @import 'mailchimp-signup-row';
