--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -6,9 +6,9 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
-  <link rel="preload" href="/fonts/Inter/Inter.var.woff2" as="font" as="font" type="font/woff2" crossorigin="anonymous" />
-  <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" as="font" type="font/ttf" crossorigin="anonymous" />
-  <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="preload" href="/fonts/Inter/Inter.var.woff2" as="font" type="font/woff2" crossorigin="anonymous" />
+  <link rel="preload" href="/fonts/ionicons.ttf?v=2.0.1" as="font" type="font/ttf" crossorigin="anonymous" />
+  <link rel="preload" href="/fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous" />
   
   <link rel="stylesheet" href="/css/style.css" />
 
