--- a/src/scss/_integrations.scss
+++ b/src/scss/_integrations.scss
@@ -35,7 +35,7 @@
 		justify-content: space-between;
 		flex-wrap: wrap;
 	}
-	
+
 	&__subnav {
 		width: 100%;
 		max-width: 480px;
@@ -108,6 +108,7 @@
 				font-size: 16px;
 				font-weight: 600;
 				color: $gray;
+                margin-top: auto;
 			}
 		}
 	}
