docs: adds micro copy

--- a/site/layouts/integrations/list.html
+++ b/site/layouts/integrations/list.html
@@ -9,7 +9,7 @@
           </p>
           <p>
             <a class="cta-link" href="/docs/integrations/">
-              Go to integrations docs
+              Go to the integrations docs
             </a>
           </p>
         </div>
@@ -43,7 +43,7 @@
                     {{.service}} integration
                   </a>
                   {{ else }}
-                    Doc is coming soon
+                    Coming soon!
                   {{ end }}
                 </div>
               </div>
@@ -73,7 +73,7 @@
                     {{.service}} integration
                   </a>
                   {{ else }}
-                    Doc is coming soon
+                    Coming soon!
                   {{ end }}
                 </div>
               </div>
@@ -133,7 +133,7 @@
                     {{.service}} integration
                   </a>
                   {{ else }}
-                    Doc is coming soon
+                    Coming soon!
                   {{ end }}
                 </div>
               </div>
