style: fixes transparent background of navbar

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -5,6 +5,7 @@
   min-height: 4rem;
   transition: all .5s;
   z-index: 9999;
+  background: $white;
   .callout {
     font-size: 13px;
     font-weight: 400;
