feat: adds integrations links to navbar and footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -16,6 +16,7 @@
             <li>
               <a href="/product/synthetic-monitoring/">Synthetic monitoring</a>
             </li>
+            <li><a href="/integrations">Integrations</a></li>
             <li><a href="/pricing">Pricing</a></li>
             <li><a href="/docs">Docs</a></li>
             <li><a href="/docs/api">API reference</a></li>
