--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -11,6 +11,7 @@
                                                                          href="/product/api-monitoring/">API
             Monitoring</a><a class="dropdown-item" href="/product/synthetic-monitoring/">Synthetic Monitoring</a><a class="dropdown-item" href="/product/alerting/">Alerting</a></div>
         </li>
+        <li class="nav-item"><a class="nav-link" href="/integrations">Integrations</a></li>
         <li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a></li>
         <li class="nav-item"><a class="nav-link" href="/docs">Docs</a></li>
         <li class="nav-item"><a class="nav-link" href="https://blog.checklyhq.com" rel="noopener">Blog</a></li>
