fix: navbar color on home should be ash

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,11 +1,14 @@
-.navbar-home {
-  background-color: $ash;
-}
+
 .navbar {
   min-height: 4rem;
   transition: all .5s;
   z-index: 9999;
   background: $white;
+
+  &.navbar-home {
+    background-color: $ash;
+  }
+
   .callout {
     font-size: 13px;
     font-weight: 400;
