fix comming soon text in one place

--- a/site/layouts/integrations/list.html
+++ b/site/layouts/integrations/list.html
@@ -103,7 +103,7 @@
                     {{.service}} integration
                   </a>
                   {{ else }}
-                    Doc is coming soon
+                    Coming soon!
                   {{ end }}
                 </div>
               </div>
