added github log in the footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -60,8 +60,12 @@
     <div class="row footer-bottom">
       <div class="col-12">
         <span>©2021 Checkly Inc. All Rights Reserved.</span>
-        <div class="float-right"><a href="https://twitter.com/checklyhq" target="_blank" rel="noopener"><img
-            src="/images/twitter.svg" alt="twitter logo" width="26" height="21" /></a></div>
+        <div class="float-right">
+          <a class="github" href="https://github.com/checkly" target="_blank" rel="noopener"><img
+          src="/images/github.svg" alt="github logo" width="24" height="24" /></a>
+          <a href="https://twitter.com/checklyhq" target="_blank" rel="noopener"><img
+          src="/images/twitter.svg" alt="twitter logo" width="26" height="21" /></a>
+        </div>
       </div>
     </div>
   </div>
