open pricing spread link in the new tab

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -158,7 +158,7 @@
           <div class="text-muted">Five checks: 5 x 44,640 = <span class="text-gray-dark pricing__check-runs-indicator pricing__check-runs-indicator--secondary">223,200 runs</span></div>
         </div>
         <div class="pricing__spreadsheet">
-          <a class="d-flex" href="https://docs.google.com/spreadsheets/d/1ahnSqIDp6VXNSGWqSOtm2lSSo5ylIaeuZn57qNPM0H0/copy" rel="noopener">
+          <a class="d-flex" href="https://docs.google.com/spreadsheets/d/1ahnSqIDp6VXNSGWqSOtm2lSSo5ylIaeuZn57qNPM0H0/copy" target="_blank" rel="noopener">
             <img src="/images/google_Sheets_logo@2x.png" alt="Google Sheets Logo" width="14" height="18" />
             Use our pre-build pricing spreadsheet if you need more details
           </a>
