feat: adds jake from railway

--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -4,7 +4,28 @@
       <div class="col-sm-12 col-md-6 col-lg-4">
         <div class="card testimonial-card mb-5 mb-md-0">
           <div class="card-block first">
-            <a href="https://1password.com" target="_blank" rel="noopener">
+            <a href="https://railway.app" target="_blank" rel="noopener">
+              <picture>
+                <source type="image/webp" srcset="/landing/railway_logo@2x.webp">
+                <source type="image/png" srcset="/landing/railway__logo@2x.png">
+                <img class="testimonial-logo" src="/landing/railway__logo@2x.png" alt="railway.app logo" width="150" height="25" />
+              </picture>
+            </a>
+            <p class="testimonial-text">"We've been using Checkly for the past months.
+              It's been phenomenal. Super easy to get setup, works flawlessly and intuitively. The team are super receptive & quick to help"</p>
+            <div class="testimonial-portrait"><img src="/images/testimonials/railway_portrait.png" alt="Jake Cooper" width="55" height="55" /></div>
+            <div class="testimonial-name-badge">
+              <div class="text-muted font-weight-bold">Jake Cooper</div>
+              <div class="text-muted">Founder / Engineer</div>
+              <a class="text-muted" href="https://railway.app/" target="_blank" rel="noopener">railway.app</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card testimonial-card mb-5 mb-md-0">
+          <div class="card-block first">
+            <a href="https://supplypike.com" target="_blank" rel="noopener">
               <picture>
                 <source type="image/webp" srcset="/landing/supplypike_logo@2x.webp">
                 <source type="image/png" srcset="/landing/supplypike_logo@2x.png">
@@ -43,30 +64,6 @@
               <div class="text-muted font-weight-bold">François Proulx</div>
               <div class="text-muted">Senior DevSecOps</div>
               <a class="text-muted" href="http://www.dfuse.io/" target="_blank" rel="noopener">dfuse.io</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-12 col-lg-4">
-        <div class="card testimonial-card mb-5 mb-md-0">
-          <div class="card-block third">
-            <a href="http://www.dfuse.io/" target="_blank" rel="noopener">
-              <picture>
-                <source type="image/webp" srcset="/landing/lyfegen_logo@2x.webp">
-                <source type="image/png" srcset="/landing/lyfegen_logo@2x.png">
-                <img class="testimonial-logo" src="/landing/lyfegen_logo@2x.png" alt="dfuse logo" width="110" height="28" />
-              </picture>
-            </a>
-            <p class="testimonial-text">"Checkly is super easy to setup and the best option for us to test our Websocket
-              API.
-              We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"</p>
-            <div class="testimonial-portrait">
-              <img alt="customer portrait" src="/images/testimonials/lyfegen_portrait.png" alt="James Gannon" width="55" height="55" />
-            </div>
-            <div class="testimonial-name-badge">
-              <div class="text-muted font-weight-bold">James Gannon</div>
-              <div class="text-muted">Chief Digital Officer</div>
-              <a class="text-muted" href="http://www.dfuse.io/" target="_blank" rel="noopener">lyfegen.com</a>
             </div>
           </div>
         </div>
