--- a/site/layouts/partials/api-monitoring-section.html
+++ b/site/layouts/partials/api-monitoring-section.html
@@ -4,9 +4,9 @@
       <div class="col-sm-12 col-md-10 col-lg-5">
         <div class="text-side text-left"><h2 class="section-super-header">api monitoring</h2>
           <h3 class="section-header">Monitor all endpoints easily</h3>
-          <p class="lead-text">Make sure your APIs always responds quickly and with the correct payload. Our intuitive editor lets you configure powerful HTTP requests. Alternatively, kickstart your checks with our Swagger and cURL importer.
+          <p class="lead-text">Make sure your APIs always responds quickly and with the correct payload. Our intuitive editor lets you configure powerful HTTP requests.
             <br><br>
-            Add Node.js-based setup/teardown scripts and fine-grained assertions for in-depth API monitoring.</p><a class="cta-link" href="/product/api-monitoring/">Learn
+            Kickstart your checks with our Swagger and cURL importer. Add Node.js-based setup/teardown scripts and fine-grained assertions for in-depth API monitoring.</p><a class="cta-link" href="/product/api-monitoring/">Learn
             more</a></div>
       </div>
       <div class="col-sm-12 col-lg-7">
