--- a/site/layouts/partials/hero-section.html
+++ b/site/layouts/partials/hero-section.html
@@ -3,8 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-10 col-lg-8">
         <h1 class="display-3">Delightful Active Monitoring<br/>for Developers</h1>
-        <p class="lead">Checkly is the API & E2E monitoring platform for the modern stack: programmable, flexible
-          and loving JavaScript.</p>
+        <p class="lead">Deep API monitoring, open-source powered E2E checks, dashboards and flexible alerting.</p>
         <div>
           <a class="signup-button btn btn-success btn-lg" data-signup="data-signup" href="https://app.checklyhq.com/signup" rel="noopener">
             Start for free
