--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@
 @import 'blog';
 @import 'product';
 @import 'integrations';
+@import 'opensource';
 @import 'promo-banner';
 @import 'share-list';
 @import 'mailchimp-signup-row';
