--- a/site/layouts/opensource/list.html
+++ b/site/layouts/opensource/list.html
@@ -24,7 +24,9 @@
       		<h2 class="section-header">Our open-source initiatives</h2>
       		<div class="d-flex">
       			<div class="card">
-      				<img class="card-image" src="/opensource/headless_recorder@2x.png" alt="card1" width="310" height="200" />
+              <div class="card-image">
+      				  <img src="/opensource/headless_recorder_logo.svg" alt="headless recorder logo" width="92" height="92" />
+              </div>
       				<h5>
                 Headless recorder
                 <span>
@@ -46,7 +48,9 @@
       				</div>
       			</div>
       			<div class="card">
-      				<img class="card-image" src="/opensource/theheadless_dev@2x.png" alt="card1" width="310" height="200" />
+              <div class="card-image">
+      				  <img src="/opensource/headlessdev_logo.svg" alt="headlessdev logo" width="69" height="92" />
+              </div>
       				<h5>
                 theheadless.dev
                 <span>
@@ -66,7 +70,9 @@
       				</div>
       			</div>
       			<div class="card">
-      				<img class="card-image" src="/opensource/terraform_provider@2x.png" alt="card1" width="310" height="200" />
+              <div class="card-image">
+      				  <img src="/opensource/terraform_logo.svg" alt="terraform logo" width="101" height="92" />
+              </div>
       				<h5>
                 Terraform Provider
                 <span>
