--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -6,7 +6,7 @@
           <h3 class="section-header">Monitor crucial flows fast</h3>
           <p class="lead-text">Monitor and validate your crucial site transactions. Take screenshots and get instant insights into what's working and what's not.
             <br><br>
-            Coding browser click-flows was hard. Not anymore. Use modern open source frameworks like Playwright and Puppeteer to automate your flows. Run your checks in 20 locations worldwide.
+            Coding browser click-flows used to be hard. Not anymore. Use modern open source frameworks like Playwright and Puppeteer to automate your flows. Run your checks in 20 locations worldwide.
           </p><a class="cta-link" href="/product/synthetic-monitoring/">Learn more</a>
         </div>
       </div>
