Revert "add benefits"
This reverts commit 7f8155d810bfaa15369f2af6b993b2800f6eb2c1.

--- a/site/layouts/partials/site-monitoring-section.html
+++ b/site/layouts/partials/site-monitoring-section.html
@@ -3,11 +3,14 @@
     <div class="row justify-content-center">
       <div class="col-sm-12 col-md-10 col-lg-5">
         <div class="text-side text-left"><h2 class="section-super-header">synthetic monitoring</h2>
-          <h3 class="section-header">Monitor crucial flows fast</h3>
-          <p class="lead-text">Monitor and validate your crucial site transactions. Take screenshots and get instant insights into what's working and what's not.
+          <h3 class="section-header">No more broken web apps</h3>
+          <p class="lead-text">Monitor and validate your most crucial site transactions like logins, shopping carts and
+            onboarding
+            flows. Take screenshots to get instant insights into what's working and what's not.
             <br><br>
-            Coding browser click-flows was hard. Not anymore. Use modern open source frameworks like Playwright and Puppeteer to automate your flows. Run your checks in 20 locations worldwide.
-          </p><a class="cta-link" href="/product/synthetic-monitoring/">Learn more</a>
+            Scripting browser click flows used to suck. Not anymore. Checkly uses Puppeteer & Playwright frameworks to run
+            your
+            flows in a Chrome browser.</p><a class="cta-link" href="/product/synthetic-monitoring/">Learn more</a>
         </div>
       </div>
       <div class="col-sm-12 col-lg-7">
