--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -35,6 +35,7 @@
             <li><a href="https://blog.checklyhq.com/" target="_blank" rel="noopener">Blog</a></li>
             <li><a href="/terms">Terms of Use</a></li>
             <li><a href="/privacy">Privacy policy</a></li>
+            <li><a href="/opensource">Opensource</a></li>
             <li><a href="/security">Security</a></li>
           </ul>
         </div>
