update homepage testimonial

--- a/site/layouts/partials/testimonial-three-col-row.html
+++ b/site/layouts/partials/testimonial-three-col-row.html
@@ -8,7 +8,7 @@
               <picture>
                 <source type="image/webp" srcset="/landing/railway_logo@2x.webp">
                 <source type="image/png" srcset="/landing/railway__logo@2x.png">
-                <img class="testimonial-logo" src="/landing/railway__logo@2x.png" alt="railway.app logo" width="150" height="25" />
+                <img class="testimonial-logo" src="/landing/railway__logo@2x.png" alt="railway.app logo" width="170" height="25" />
               </picture>
             </a>
             <p class="testimonial-text">"We've been using Checkly for the past months.
@@ -18,6 +18,28 @@
               <div class="text-muted font-weight-bold">Jake Cooper</div>
               <div class="text-muted">Founder / Engineer</div>
               <a class="text-muted" href="https://railway.app/" target="_blank" rel="noopener">railway.app</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="card testimonial-card mb-5 mb-md-0">
+          <div class="card-block second">
+            <a href="http://www.dfuse.io/" target="_blank" rel="noopener">
+              <picture>
+                <source type="image/webp" srcset="/landing/1p-wordmark@2x.webp">
+                <source type="image/png" srcset="/landing/1p-wordmark@2x.png">
+                <img class="testimonial-logo" src="/landing/1p-wordmark@2x.png" alt="dfuse logo" width="140" height="26" />
+              </picture>
+            </a>
+            <p class="testimonial-text">"Checkly is a fabulous developer tool! The flexible features and developer-friendly API made the integration super easy. Bonus: their support is super friendly and knowledgeable!"</p>
+            <div class="testimonial-portrait">
+              <img alt="customer portrait" src="/images/testimonials/conner_hicks.png" alt="Conner Hicks" width="55" height="55" />
+            </div>
+            <div class="testimonial-name-badge">
+              <div class="text-muted font-weight-bold">Connor Hicks</div>
+              <div class="text-muted">Lead Developer</div>
+              <a class="text-muted" href="https://1password.com/" target="_blank" rel="noopener">1password.com</a>
             </div>
           </div>
         </div>
@@ -40,30 +62,6 @@
               <div class="text-muted font-weight-bold">Kanat Bekterimov</div>
               <div class="text-muted">Software Engineer Manager</div>
               <a class="text-muted" href="https://supplypike.com/" target="_blank" rel="noopener">supplypike.com</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-4">
-        <div class="card testimonial-card mb-5 mb-md-0">
-          <div class="card-block second">
-            <a href="http://www.dfuse.io/" target="_blank" rel="noopener">
-              <picture>
-                <source type="image/webp" srcset="/landing/dfuse_logo@2x.webp">
-                <source type="image/png" srcset="/landing/dfuse_logo@2x.png">
-                <img class="testimonial-logo" src="/landing/dfuse_logo@2x.png" alt="dfuse logo" width="110" height="26" />
-              </picture>
-            </a>
-            <p class="testimonial-text">"Checkly is super easy to setup and the best option for us to test our Websocket
-              API.
-              We depend on it 24/7 and it’s our go-to place when PagerDuty wakes us up at 3am"</p>
-            <div class="testimonial-portrait">
-              <img alt="customer portrait" src="/images/testimonials/dfuse_portrait.png" alt="François Proulx" width="55" height="55" />
-            </div>
-            <div class="testimonial-name-badge">
-              <div class="text-muted font-weight-bold">François Proulx</div>
-              <div class="text-muted">Senior DevSecOps</div>
-              <a class="text-muted" href="http://www.dfuse.io/" target="_blank" rel="noopener">dfuse.io</a>
             </div>
           </div>
         </div>
