--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -12,10 +12,6 @@
               <img src="/images/arrow-up-right.svg" alt="arrow up right" width="8" height="8" />
               Get involved on GitHub
             </a>
-            <a class="cta-link" href="https://github.com/checkly" rel="noopener">
-            	<img src="/images/arrow-down.svg" alt="arrow down" width="10" height="11" />
-              See our projects
-            </a>
       		</div>
       	</div>
       </section>
@@ -98,10 +94,10 @@
       	<div class="container text-center">
       		<h2 class="section-header">1% goes to Open Source</h2>
       		<p>
-      			We are all in! We donate 1% of our MRR to those developers creating the software that makes internet awesome
+      			We love open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers building incredible things.
       		</p>
-      		<a href="https://github.com/checkly" rel="noopener">
-      			See our sponsored projects
+      		<a href="https://github.com/orgs/checkly/sponsoring" rel="noopener">
+      			Check who are we supporting
       		</a>
       	</div>
       </section>
@@ -109,9 +105,7 @@
       	<div class="container">
       		<h2 class="section-header">
       		  Recent posts from
-      		  <span>
-		          theheadless.dev
-		        </span>
+		        <img src="/opensource/theheadless-dev.svg" alt="theheadless.dev logo" width="271" height="23" />
       		</h2>
       		<p class="lead">Puppeteer and Playwright tips, tricks and in-depth guides from the trenches</p>
           <div class="d-flex">
