update open-source text with Open Source

--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -5,7 +5,7 @@
       	<div class="container">
       		<h1 class="display-3">Open Source</h1>
       		<p class="opensource__hero__lead">
-      			Checkly's foundation is open-source. We are not only using but building and supporting open-source. To grow the OSS and headless automation community even further, give back and allow developers to keep doing incredible things.  🚀
+      			Checkly's foundation is Open Source. We are not only using but building and supporting Open Source. To grow the OSS and headless automation community even further, give back and allow developers to keep doing incredible things.  🚀
       		</p>
       		<div class="cta-wraps">
       			<a class="cta-link" href="https://github.com/checkly" rel="noopener">
@@ -17,7 +17,7 @@
       </section>
       <section class="opensource__initiatives">
       	<div class="container">
-      		<h2 class="section-header">Our open-source initiatives</h2>
+      		<h2 class="section-header">Our Open Source initiatives</h2>
       		<div class="d-flex">
       			<div class="card">
               <div class="card-image">
@@ -94,7 +94,7 @@
       	<div class="container text-center">
       		<h2 class="section-header">1% goes to Open Source</h2>
       		<p>
-      			We love open source and aim to donate 1% of our revenue to non-corporate backed open source maintainers building incredible things.
+      			We love Open Source and aim to donate 1% of our revenue to non-corporate backed Open Source maintainers building incredible things.
       		</p>
       		<a href="https://github.com/orgs/checkly/sponsoring" rel="noopener">
       			Check who are we supporting
