update link in opensource page

--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -8,7 +8,7 @@
       			Checkly's foundation is Open Source. We are not only using but building and supporting Open Source. To grow the OSS and headless automation community even further, give back and allow developers to keep doing incredible things.  🚀
       		</p>
       		<div class="cta-wraps">
-      			<a class="cta-link" href="https://github.com/checkly" rel="noopener">
+      			<a class="cta-link" href="https://github.com/checkly" target="_blank" rel="noopener">
               <img src="/images/arrow-up-right.svg" alt="arrow up right" width="8" height="8" />
               Get involved on GitHub
             </a>
@@ -34,11 +34,11 @@
       					Headless recorder is a Chrome extension that records your browser interactions
       				</p>
       				<div class="cta-wraps">
-      					<a class="cta-link" href="https://github.com/checkly/headless-recorder" rel="noopener">
+      					<a class="cta-link" href="https://chrome.google.com/webstore/detail/headless-recorder/djeegiggegleadkkbgopoonhjimgehda?hl=en" target="_blank" rel="noopener">
 		              <img src="/images/arrow-download.svg" alt="arrow download" width="10" height="14" />
 		              Get Headless recorder
 		            </a>
-		            <a class="cta-link" href="https://github.com/checkly/headless-recorder" rel="noopener">
+		            <a class="cta-link" href="https://github.com/checkly/headless-recorder" target="_blank" rel="noopener">
 		              See the code
 		            </a>
       				</div>
@@ -56,11 +56,11 @@
               </h5>
       				<p>Community driven knowledge base for learning headless browser automation</p>
       				<div class="cta-wraps">
-      					<a class="cta-link" href="https://github.com/checkly/theheadless.dev" rel="noopener">
+      					<a class="cta-link" href="https://theheadless.dev" target="_blank" rel="noopener">
 		              <img src="/images/arrow-download.svg" alt="arrow download" width="10" height="14" />
 		              Visit theheadless.dev
 		            </a>
-		            <a class="cta-link" href="https://github.com/checkly/theheadless.dev" rel="noopener">
+		            <a class="cta-link" href="https://github.com/checkly/theheadless.dev" target="_blank" rel="noopener">
 		              See the code
 		            </a>
       				</div>
@@ -78,11 +78,11 @@
               </h5>
       				<p>The Terraform provider enables users to manage Checkly resources</p>
       				<div class="cta-wraps">
-      					<a class="cta-link" href="https://github.com/checkly/terraform-provider-checkly" rel="noopener">
+      					<a class="cta-link" href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">
 		              <img src="/images/arrow-visit.svg" alt="arrow visit" width="13" height="13" />
 		              Get Terraform provider
 		            </a>
-		            <a class="cta-link" href="https://github.com/checkly/terraform-provider-checkly" rel="noopener">
+		            <a class="cta-link" href="https://github.com/checkly/terraform-provider-checkly" target="_blank" rel="noopener">
 		              See the code
 		            </a>
       				</div>
@@ -96,7 +96,7 @@
       		<p>
       			We love Open Source and aim to donate 1% of our revenue to non-corporate backed Open Source maintainers building incredible things.
       		</p>
-      		<a href="https://github.com/orgs/checkly/sponsoring" rel="noopener">
+      		<a href="https://github.com/orgs/checkly/sponsoring" target="_blank" rel="noopener">
       			Check who are we supporting
       		</a>
       	</div>
@@ -105,7 +105,9 @@
       	<div class="container">
       		<h2 class="section-header">
       		  Recent posts from
-		        <img src="/opensource/theheadless-dev.svg" alt="theheadless.dev logo" width="271" height="23" />
+            <a href="https://theheadless.dev" target="_blank" rel="noopener">
+		          <img src="/opensource/theheadless-dev.svg" alt="theheadless.dev logo" width="271" height="23" />
+            </a>
       		</h2>
       		<p class="lead">Puppeteer and Playwright tips, tricks and in-depth guides from the trenches</p>
           <div class="d-flex">
@@ -114,7 +116,7 @@
               <h6 id="card-{{$index}}-title"></h6>
               <p id="card-{{$index}}-description"></p>
               <div class="cta-wraps">
-                <a class="cta-link" id="card-{{$index}}-link" rel="noopener">
+                <a class="cta-link" id="card-{{$index}}-link" target="_blank" rel="noopener">
                   <img src="/images/arrow-up-right.svg" alt="arrow up right" width="8" height="8" />
                   Read article
                 </a>
